2000-08-22  Radek Doulik  <rodo@helixcode.com>

	* htmlengine.c (parse_body): don't insert " ", this fixes problem
	with linked images but maybe broke another cases? any complains?
	(parse_d): fix <div> case when on beggining of new flow (head ==
	NULL) set e->flow align to divAlign

	* htmlclueflow.c (calc_size): disabled width setting to rmargin -
	o->x (Larry could you pls check this?)

	* htmltext.c (html_text_init): don't call convert_nbsp here as we
	want &nbsp; not disappear from texts

	* htmlclueflow.c (calc_preferred_width): use
	html_object_next_not_slave instead of obj->next and
	html_object_prev_not_slave likewise

2000-08-21  Mathieu Lacage <mathieu@eazel.com>

	* src/Makefile.am : add LIBADD variable so that ldd reports correct
	output on libgtkhtml.so

2000-08-21  Radek Doulik  <rodo@helixcode.com>

	* htmlclueflow.c (next_obj_and_clear): fixed for interval checking
	(spell_check_word_mark): likewise

	* htmltext.c (html_text_init): initialize face to NULL

	* gtkhtml.c (set_fonts_idle): use html_gdk_font_manager_set_size,
	so fonts scale nicely when changing size of variable width fonts
	in capplet
	(set_fonts_idle): get fixed face for fix and not variable

	* htmlgdkfontmanager.c (html_gdk_font_manager_set_size): new
	function, sets size to all non-default faces

	* htmlgdkfontmanager.[ch]: rewritten

	* htmlfontface.[ch]: new files

	* htmlengine.c (current_font_face): new helper function
	(push_font_face): likewise
	(pop_font_face): likewise
	(parse_font_face): likewise

	* gtkhtml.c (gtk_html_construct): moved set_fonts + gconf
	notification here, because engine is created
	(gtk_html_construct): call set_fonts_idle instead of set_fonts

	* htmlengine.c (html_engine_init): initialize clue to NULL

2000-08-18  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.c (set_fonts_idle): check to make sure we have an engine
	and a clue before we start operating on it.  I'll look more
	carefully at this tomorrow, but I need to read mail now.
