@@ -729,35 +729,41 @@ size_allocate (GtkWidget *widget, GtkAllocation *allocation)
 }
 
 static void
-on_url (GtkWidget *widget, HTMLObject *obj)
+on_object (GtkWidget *widget, HTMLObject *obj)
 {
 	GtkHTML *html = GTK_HTML (widget);
 	const gchar *url;
 
-	g_return_if_fail (obj);
+	if (obj) {
+		if ((url = (obj) ? html_object_get_url (obj) : NULL)) {
+			if (html->pointer_url == NULL || strcmp (html->pointer_url, url) != 0) {
+				g_free (html->pointer_url);
+				html->pointer_url = g_strdup (url);
+				gtk_signal_emit (GTK_OBJECT (html), signals[ON_URL], url);
+			}
 
-	if ((url = (obj) ? html_object_get_url (obj) : NULL)) {
-		if (html->pointer_url == NULL || strcmp (html->pointer_url, url) != 0) {
-			g_free (html->pointer_url);
-			html->pointer_url = g_strdup (url);
-			gtk_signal_emit (GTK_OBJECT (html), signals[ON_URL], url);
+			if (html->engine->editable)
+				gdk_window_set_cursor (widget->window, html->ibeam_cursor);
+			else
+				gdk_window_set_cursor (widget->window, html->hand_cursor);
+		} else {
+			if (html->pointer_url != NULL) {
+				g_free (html->pointer_url);
+				html->pointer_url = NULL;
+				gtk_signal_emit (GTK_OBJECT (html), signals [ON_URL], NULL);
+			}
+
+			if (obj != NULL && html_object_is_text (obj) && html->allow_selection)
+				gdk_window_set_cursor (widget->window, html->ibeam_cursor);
+			else
+				gdk_window_set_cursor (widget->window, html->arrow_cursor);
 		}
-
-		if (html->engine->editable)
-			gdk_window_set_cursor (widget->window, html->ibeam_cursor);
-		else
-			gdk_window_set_cursor (widget->window, html->hand_cursor);
 	} else {
-		if (html->pointer_url != NULL) {
-			g_free (html->pointer_url);
+		if (html->pointer_url) {
 			html->pointer_url = NULL;
-			gtk_signal_emit (GTK_OBJECT (html), signals [ON_URL], NULL);
+			g_free (html->pointer_url);
 		}
-
-		if (obj != NULL && html_object_is_text (obj) && html->allow_selection)
-			gdk_window_set_cursor (widget->window, html->ibeam_cursor);
-		else
-			gdk_window_set_cursor (widget->window, html->arrow_cursor);
+		gdk_window_set_cursor (widget->window, html->arrow_cursor);
 	}
 }
 
@@ -813,8 +819,7 @@ mouse_change_pos (GtkWidget *widget, gint x, gint y)
 					   x + engine->x_offset, y + engine->y_offset);
 	}
 
-	if (obj)
-		on_url (widget, obj);
+	on_object (widget, obj);
 
 	return TRUE;
 }
